--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -1,2 +1,6 @@
-.col-lg-12
-  div ng-app='app.constructor' ng-controller='ConstructorController'
+.col-lg-4
+.col-lg-8
+  .constructor ng-app='app.constructor' ng-controller='ConstructorController'
+    h1 Default playbook
+    ul.playbook ui-sortable='sortableOptions' ng-model='items'
+      li.well.playbook-item ng-repeat='item in items' class='item' {{ item.text }}
