Dummy widget for creating new directory

--- a/app/assets/stylesheets/all/constructor.css.scss
+++ b/app/assets/stylesheets/all/constructor.css.scss
@@ -1,11 +1,5 @@
-$item-padding: 1em;
-
 .constructor {
-  .playbook {
-    @include list-unstyled;
-  }
-
-  .playbook-item {
-    margin-bottom: $item-padding;
+  .bootstrap-select {
+    width: 100% !important;
   }
 }
