--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,10 @@
+@import "cosmo/variables";
+
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap-select";
 
-@import "all/*";
+@import "cosmo/overrides";
+
+@import "all/all";
