--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -30,3 +30,7 @@ html lang="en"
 
     = render partial: 'shared/flash_messages'
     = yield
+
+    footer
+      .container
+        p Created by <a href="https://github.com/andreychernih">Andrey Chernih</a>
