--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,10 +1,11 @@
-@import "cosmo/variables";
+// @import "cosmo/variables";
 
 // "bootstrap-sprockets" must be imported before "bootstrap" and "bootstrap/variables"
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "bootstrap-select";
 
-@import "cosmo/overrides";
+// @import "cosmo/overrides";
 
+@import "all/layout";
 @import "all/all";
