--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,7 +12,7 @@ html lang="en"
     /[if lt IE 9]
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"
 
-  body
+  body ng-app='app.rubyops'
     nav.navbar.navbar-inverse.navbar-fixed-top
       .container
         .navbar-header
