--- a/app/views/dashboard/show.html.slim
+++ b/app/views/dashboard/show.html.slim
@@ -4,7 +4,7 @@
       .col-lg-10.col-lg-offset-1
         h1= site_name
         p
-          ' Ruby developer? Heard about <strong>DevOps</strong> but too busy to learn it? Streamline your development workflow in no time by creating production-like virtual machine with your development environment. Try this extremely simple to use wizard to create new <strong>Ruby on Rails</strong> server using
+          ' Ruby developer? Heard about <strong>DevOps</strong> but too busy to learn it? Streamline your development workflow in no time by creating production-like virtual machine with your development environment. Try this extremely simple to use VM configuration tool to create new <strong>Ruby on Rails</strong> server using
           a href='https://www.vagrantup.com/' <strong>vagrant</strong>
           '  and
           a href='http://www.ansible.com/' <strong>ansible</strong>
