--- a/app/templates/Vagrantfile.erb
+++ b/app/templates/Vagrantfile.erb
@@ -17,14 +17,13 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   end
 
   config.vm.provision 'ansible' do |ansible|
-    ansible.playbook = '../ansible/site.yml'
+    ansible.playbook = 'ansible/site.yml'
     ansible.sudo = true
     ansible.groups = {
-      'webservers'           => %w(application),
-      'dbservers'            => %w(database),
+      'webservers'           => %w(<%= name %>),
+      'dbservers'            => %w(<%= name %>),
       'development:children' => %w(webservers dbservers)
     }
     ansible.tags = ENV['TAGS']
-    # ansible.verbose = 'vvvv'
   end
 end
