--- a/app/templates/Vagrantfile.erb
+++ b/app/templates/Vagrantfile.erb
@@ -5,25 +5,25 @@ VAGRANTFILE_API_VERSION = '2'
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.provider :virtualbox do |vb|
-    vb.memory = <%= memory %>
-    vb.cpus = <%= cores %>
+    vb.memory = <%= vm_memory %>
+    vb.cpus = <%= vm_cores %>
   end
 
-  config.vm.box = '<%= os %>'
+  config.vm.box = '<%= vm_os %>'
 
   config.vm.synced_folder '../', '/vagrant'
 
-  config.vm.define '<%= name %>' do |machine|
-    machine.vm.hostname = '<%= name %>'
-    machine.vm.network 'forwarded_port', guest: 80, host: <%= forwarded_port %>
+  config.vm.define '<%= vm_name %>' do |machine|
+    machine.vm.hostname = '<%= vm_name %>'
+    machine.vm.network 'forwarded_port', guest: 80, host: <%= vm_forwarded_port %>
   end
 
   config.vm.provision 'ansible' do |ansible|
     ansible.playbook = 'ansible/site.yml'
     ansible.sudo = true
     ansible.groups = {
-      'webservers'           => %w(<%= name %>),
-      'dbservers'            => %w(<%= name %>),
+      'webservers'           => %w(<%= vm_name %>),
+      'dbservers'            => %w(<%= vm_name %>),
       'development:children' => %w(webservers dbservers)
     }
     ansible.tags = ENV['TAGS']
