Add view spec to check required params presence

--- a/app/templates/ansible/group_vars/all.yml.erb
+++ b/app/templates/ansible/group_vars/all.yml.erb
@@ -1,3 +1,7 @@
 ---
 app_name: <%= vm_name %>
 server_name: <%= server_name %>
+ruby_version: <%= ruby_version %>
+
+database_name: <%= database_name %>
+database_user: <%= database_user %>
