Add nginx and unicorn

--- a/app/templates/Vagrantfile.erb
+++ b/app/templates/Vagrantfile.erb
@@ -7,6 +7,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.provider :virtualbox do |vb|
     vb.memory = <%= vm_memory %>
     vb.cpus = <%= vm_cores %>
+    vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
+    vb.customize ["modifyvm", :id, "--natdnsproxy1", "on"]
   end
 
   config.vm.box = '<%= vm_os %>'
