--- a/app/templates/ansible/group_vars/all.yml.erb
+++ b/app/templates/ansible/group_vars/all.yml.erb
@@ -5,3 +5,18 @@ ruby_version: <%= ruby_version %>
 
 database_name: <%= database_name %>
 database_user: <%= database_user %>
+
+ssl_certificate_path: /etc/nginx/ssl/<%= server_name %>.crt
+ssl_certificate_key_path: /etc/nginx/ssl/<%= server_name %>.key
+
+app_path: /vagrant
+app_public_path: "{{ app_path }}/public"
+app_config_path: "{{ app_path }}/config"
+app_temp_path: "{{ app_path }}/tmp"
+app_logs_path: "{{ app_path }}/log"
+
+unicorn_sock_path: "/tmp/unicorn.development.sock"
+unicorn_config_path: "{{ app_config_path }}/unicorn.development.rb"
+unicorn_pid_path: "{{ app_temp_path }}/unicorn.development.pid"
+unicorn_stderr_path: "{{ app_logs_path }}/unicorn.err.log"
+unicorn_stdout_path: "{{ app_logs_path }}/unicorn.log"
